--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#FF9800</color>
     <color name="colorPrimaryDark">#616161</color>
     <color name="colorAccent">#424242</color>
+    <color name="colorButtonBackground">#FF9800</color>
 </resources>
