--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,36 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Primary theme color of the app (sets background color of app bar) -->
         <item name="colorPrimary">#FF9800</item>
         <!-- Background color of buttons in the app -->
         <item name="colorButtonNormal">#FF9800</item>
+    </style>
+    
+    <!-- Team labels style -->
+    <style name="TeamLabelStyle" parent="AppTheme">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <!-- Score Style -->
+    <style name="ScoreTextStyle" parent="TeamLabelStyle">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">56sp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:text">0</item>
+        <item name="android:layout_marginBottom">24dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+    </style>
+
+    <!-- Button Style -->
+    <style name="ButtonStyle" parent="AppTheme">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginBottom">8dp</item>
     </style>
 </resources>
